[build-system]
requires = ['setuptools>=68.0.0', 'wheel>=0.41.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'authenv-service'
version = '1.0.1'
description = 'Generic Global Authentication and Environment Properties Service'
authors = [{name = "Bibek Aryal"}]
readme = 'README.md'
requires-python = ">=3.9"
classifiers = [
    "License :: Personal Use Only",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    'bcrypt>=4.0.1',
    'fastapi>=0.100.0',
    'pydantic>=2.0.2',
    'pydantic_settings>=2.0.1',
    'pyjwt>=2.7.0',
    'pymongo>=4.4.0',
    'requests>=2.31.0',
    'uvicorn>=0.22.0',
]

[project.optional-dependencies]
lint = [
    'isort>=5.12.0',
    'black>=23.7.0',
    'flake8 >= 6.0.0',
    'Flake8-pyproject >= 1.2.3'
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']

[tool.flake8]
max-complexity = 10
max-line-length = 88
exclude = [".build", ".venv", ".git", ".idea", "__pycache__", "*.egg-info"]
extend-ignore = ['E203']

[project.urls]
Source = "https://github.com/bibekaryal86/authenv-service"

# [project.scripts]
