[build-system]
requires = ['setuptools>=68.0.0', 'wheel>=0.41.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'authenv-service'
version = '1.0.1'
description = 'Generic Global Authentication and Environment Properties Service'
authors = [{name = "Bibek Aryal"}]
readme = 'README.md'
requires-python = ">=3.9"
classifiers = [
    "License :: Personal Use Only",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    'bcrypt>=4.0.1',
    'fastapi>=0.100.0',
    'pydantic>=2.0.2',
    'pydantic_settings>=2.0.1',
    'pyjwt>=2.7.0',
    'pymongo>=4.4.0',
    'requests>=2.31.0',
    'uvicorn>=0.22.0',
]

[project.optional-dependencies]
lint = [
    'isort>=5.12.0',
    'black>=23.7.0',
    'flake8 >= 6.0.0',
    'Flake8-pyproject >= 1.2.3',
]
test = [
    'pytest >= 7.4.0',
    'pytest-cov >= 4.1.0',
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']

[tool.flake8]
max-complexity = 15
max-line-length = 88
exclude = ["__pycache__"]
extend-ignore = ['E203']

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = '-ra --cov --cov-report=term' #html
log_cli = 'True'

[project.urls]
Source = "https://github.com/bibekaryal86/authenv-service"

# [project.scripts]
