[build-system]
requires = ['setuptools>=68.0.0', 'wheel>=0.41.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'authenv-service'
version = '1.0.1'
description = 'Generic Global Authentication and Environment Properties Service'
authors = [{name = "Bibek Aryal"}]
readme = 'README.md'
requires-python = ">=3.11"
classifiers = [
    "License :: Personal Use Only",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = [ "requirements.txt" ]}

[project.optional-dependencies]
lint = [
    'isort>=5.12.0',
    'black>=23.7.0',
    'flake8>=6.0.0',
    'Flake8-pyproject>=1.2.3',
]
test = [
    'pytest>=7.4.0',
    'pytest-cov>=4.1.0',
    'pytest-env>=0.8.2'
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']

[tool.flake8]
max-complexity = 15
max-line-length = 88
exclude = ["__pycache__"]
extend-ignore = ['E203']

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = [ './src/authenv_service' ]
addopts = '-ra --cov --cov-report=term' #html
log_cli = 'True'
env = [ 'IS_PYTEST = True ']

[project.urls]
Source = "https://github.com/bibekaryal86/authenv-service"

# [project.scripts]
